--- a/stackgame/app/build.gradle
+++ b/stackgame/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'androidx.core:core:1.8.0'
-
+    implementation 'com.google.android.ump:user-messaging-platform:2.0.0'
+//    implementation 'com.google.android.gms:play-services-ads-lite:20.2.0'
+    implementation 'com.google.android.ads.consent:consent-library:1.0.8'
 }
